2014-10-15  34  Bookmark Linking support in BMEditDlg complete and working. Added QuickBMSelDlg.
2014-10-26  39  BMViewDlg shows linked bookmarks
2014-10-27  40  Introduced BookmarkExtraInfo tables and UI and initial code.
2014-10-29  42  Bookmark Extra Info adding, viewing, editing, etc all done.
2014-11-06  47  Introduce business logic class, implemented Trashing bookmarks. Ported to Qt5.3.
2014-11-09  48  FirefoxBookmarkJSONFileParser parses Firefox bookmarks json documents into own structs.
2014-11-11  48  Introduce general importers and ImportedBookmarksPreviewDialog
2014-11-13  52  Implemented BookmarkImporter initialization, etc code.
2014-11-14  52  Decided and implemented BookmarkImporter::Analyze, UI updates.
2014-11-15  53  MainWindow shows bookmarks in the preview dialog after analysis.
2014-11-16  51  Don't rely on GUIDs, initial tagged bookmark import implementation.
2015-02-24  56  Worked on importer and imported preview dialog.
2015-02-26  56  Preview dialog functions mostly working.
2015-03-19  56  Import logic complete, but real processing is still to happen.
2015-03-21  58  MHT Saving url getting logic done, file parsers and mht format remaining.
2015-03-22  57  MHT Saving done.
2015-09-16  68  Prepare for new dev streak, added to-dos from vt.
2015-09-21  68  File layouts for file archives, the new file layout with hints.
2015-09-21  55  TODO Smashing
2015-09-23  41  TODO Smashing
2015-09-24  32  TODO Smashing
2015-09-26  19  TODO Smashing
2015-09-27  15  Import Improvements
2015-09-29  15  Import bugfix
2015-09-30  16  Import bug finally fixed!
2015-10-01  17  Fixing import preview dialog
2015-10-02  16  MHTSaver bugfixes
2015-10-03  16  Bookmark importer and preview dlg bugfixes
2015-10-04  15  Import bookmarks together with processing
2015-10-07  14  Begin using the program finally. From now on project structure changes, and release
                archives and descriptions will be less frequently made and updated.